# MINDknight

./: .gitignore  Cargo.toml  Packets.txt  README.md  final_data.txt  main.py  temptest.txt  temptrain.txt  untitled.txt
src/: collect_data.py  csv.py  data.py  final_data.txt  log_scrape.py  main.rs  model.py  parse.py  parse_test.py  parsed_packets.txt  test_data.txt
src/games/: e_game1.txt  e_game2.txt  e_game3.txt  e_game4.txt  e_game5.txt  game1.txt  game2.txt  game3.txt  game4.txt  game5.txt  test_log.txt
src/py/: packet_capture.py
