[package]
name = "mindknight"
version = "0.1.0"
authors = ["Ashiix <Ashiix@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.15.0", features = ["tensorflow_gpu"] }
pcap = "0.7.0"
